# ifcb-focus-microservice

./: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
focus_service/: bin_store.py  main.py  processor.py
