[project]
name = "focus-service"
version = "0.1.0"
description = "IFCB Focus metric microservice."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amplify-stateless @ git+https://github.com/WHOIGit/amplify-stateless-microservice.git@v1.3.1",
    "amplify-storage-utils @ git+https://github.com/WHOIGit/amplify-storage-utils.git@v1.3.2",
    "ifcb-focus @ git+https://github.com/WHOIGit/ifcb-focus.git@v1.0.2",
    "pyifcb @ git+https://github.com/joefutrelle/pyifcb.git@v1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages =["focus_service"]

[tool.hatch.metadata]
allow-direct-references = true
